# Cpp-Livestream

./: CMakeLists.txt  README.md  main.cpp  test.html
project/: base64.h  http_server.h  ml_model.h  video_capture.h  websocket_server.h
src/: base64.cpp  http_server.cpp  ml_model.cpp  video_capture.cpp  websocket_server.cpp
